traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:10: error: value =! is not a member of Boolean
    case ( 6,_) => ecritMessage(cpt); cpt = cpt + 1 ; setPos(getX(),getY()+1); allerADroite=!allerADroite
                                                                                           ^