traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
override def run() {
  val largeur : Int = getMondeLargeur()
  val hauteur : Int = getMondeHauteur()
  var cpt : Int = 0 
  var fini : Boolean = false
  var allerADroite : Boolean = true
  while (!fini) {
  (getX(),getY()) match {
    case (6,6) => ecritMessage(cpt); fini = true
    case (_,6) => ecritMessage(cpt); cpt= cpt + 1; setPos(getX(),getX()+1); allerADroite= !allerADroite
    case ( 6,_) => ecritMessage(cpt); cpt = cpt + 1 ; setPos(getX(),getY()+1); allerADroite=!allerADroite
    case (_,_)=> ecritMessage(cpt); cpt=cpt+1; if  (allerADroite) { setPos(getX(),getY()+1)}
  																					   else {setPos(getX(),getY()-1)}
  }
  }}